examples/invalid/error_semantico1.cpp
int main() {
  int x;
  int y;

  y = z + 1; // z no fue declarada
  x = y;

  return 0;
}
